--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -42,7 +42,7 @@
  TRAIT_SYNCRETIC_PROLES_EFFECT:0 "$MOD_POP_HAPPINESS$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+10%§!\nไม่สามารถสร้าง §Yผู้นำ§! ได้\nไม่สามารถจ้างในงาน §Y$pop_cat_ruler$§! หรือ §Y$pop_cat_specialist$§! ได้"
  TRAIT_NERVE_STAPLED_EFFECT:2 "$mod_planet_jobs_produces_mult$: §G+5%§!\nไม่สามารถสร้าง §Yผู้นำ§!\nไม่สามารถจ้างในงาน §Y$pop_cat_ruler$§! หรือ §Y$pop_cat_specialist$§! ได้"
  TRAIT_CHARISMATIC_EFFECT:4 "£amenities£ ความอยู่ดีกินดีจาก £job£ งาน: §G+20%§!"
- TRAIT_DOMESTIC_PROTOCOLS_EFFECT:1 "Can be employed in £job_servant£ §Y$job_servant$§! Jobs if under §Y$ai_servitude_name$§!"
+ TRAIT_DOMESTIC_PROTOCOLS_EFFECT:1 "สามารถทำงานได้ใน £job_servant£ §Yงาน$job_servant$§! ถ้าอยู่ภายใต้ §Y$ai_servitude_name$§!"
  TRAIT_REPUGNANT_EFFECT:4 "£amenities£ ความอยู่ดีกินดีจาก £job£ งาน: §R-20%§!"
  TRAIT_EMOTION_EMULATORS_EFFECT:2 "£amenities_no_happiness£ความอยู่ดีกินดีจาก £job£ งาน: §G+20%§!"
  TRAIT_UNCANNY_EFFECT:2 "£amenities_no_happiness£ความอยู่ดีกินดีจาก £job£ งาน: §R-20%§!"
@@ -690,7 +690,7 @@
  HABITABILITY:0 "อยู่อาศัยได้"
  HABITABILITY_BREAKDOWN:0 "§EHabitability Breakdown:§!"
  HABITABILITY_EFFECTS:0 "Habitability Effects:"
- HABITABLITIY_VALUE:1 "Habitability Value: $VALUE$ ($SPECIES|Y$)"
+ HABITABLITIY_VALUE:1 "ค่าการอยู่อาศัยได้: $VALUE$ ($SPECIES|Y$)"
  HABITABILITY_FLOOR_DESCRIPTION:0 "$STRING$: $VALUE$"
  HABITABILITY_CEIL_DESCRIPTION:0 "$STRING$: $VALUE$"
  pop_habitability:0 "ดาวเคราะห์ที่อยู่อาศัยได้"
@@ -1028,7 +1028,7 @@
  CONSTRUCTION_COST:0 "ค่าใช้จ่าย: "
  PRODUCES_RESOURCES:0 "ผลิต: "
  REQUIRES_RESOURCES:0 "ค่าบำรุงรักษา: "
- RESOURCE_GAIN:0 "Resource Gain: "
+ RESOURCE_GAIN:0 "ทรัพยากรที่ได้รับ: "
  CONSTRUCTION_TIME:0 "เวลาก่อสร้าง: £resource_time£ $TIME$"
  REPLACE:0 "แทนที่"
  DESTROY:0 "ทำลาย"
@@ -3245,7 +3245,7 @@
  NUM_ORDERS:0 "จำนวนคำสั่ง: $COUNT|H$"
  FLEETORDER_MOVE_BUTTON:0 "ย้ายมาที่นี่"
  FLEETORDER_ORBIT_BUTTON:0 "เข้าสู่วงโคจร"
- FLEETORDER_BUILD_MEGASTRUCTURE_BUTTON:1 "Build $MEGASTRUCTURE|H$"
+ FLEETORDER_BUILD_MEGASTRUCTURE_BUTTON:1 "สร้าง $MEGASTRUCTURE|H$"
  FLEETORDER_BUILD_CURRENT_shipclass_orbital_station_BUTTON:0 "สร้างสถานีวงโคจร"
  FLEETORDER_BUILD_CUSTOM_shipclass_orbital_station_BUTTON:0 "สร้างสถานีวงโคจรแบบปรับแต่งเอง"
  FLEETORDER_BUILD_CURRENT_shipclass_mining_station_BUTTON:0 "สร้างสถานีขุดแร่"
@@ -3552,7 +3552,7 @@
  trait_robot_domestic_protocols:0 "โปรโตคอลในจักรวรรดิ"
  trait_robot_domestic_protocols_desc:1 "§Lโปรโตคอล(ภาษาที่ใช้สื่อสาร)อุปกรณ์และพฤติกรรมเฉพาะสำหรับความต้องการภายในจักรวรรดิที่เป็นไปได้ทั้งหมด รับประกันการทำงานที่เต็มรูปแบบ§!"
  trait_robot_superconductive:0 "สารตัวนำยิ่งยวด"
- trait_robot_superconductive_desc:0 "§LThe use of superconductive materials in units has cut energy transmission losses to zero percent.§!\n"
+ trait_robot_superconductive_desc:0 "§Lการใช้วัสดุตัวนำยวดยิ่งช่วยลดการสูญเสียการส่งผ่านพลังงานให้เหลือศูนย์เปอร์เซ็นต์§!\n"
  trait_robot_double_jointed:0 "ข้อต่อยืดหยุ่น"
  trait_robot_double_jointed_desc:0 "§Lยูนิตแรงงานที่สามารถพับเก็บได้ มาพร้อมกับข้อต่อที่ยืดหยุ่นซึ่งช่วยให้พับเก็บได้อย่างเป็นระเบียบในระหว่างการขนส่ง จากนั้นก็สามารถประกอบขึ้นได้เองในสถานที่ทำงาน§!\n"
  trait_robot_bulky:0 "ใหญ่และเทอะทะ"
@@ -4018,7 +4018,7 @@
  UNEMPLOYED:0 "คนว่างงาน"
  CONSUMPTION:0 "การบริโภค"
  PRODUCTION:0 "ผลผลิต"
- DEFICIT:0 "Deficit"
+ DEFICIT:0 "ขาดดุล"
  PHYSICS:0 "ฟิสิกส์"
  SOCIETY:0 "สังคม"
  ENGINEERING:0 "วิศวกรรม"
@@ -4212,7 +4212,7 @@
  POPULATION_TAB:0 "ประชากร"
  TILES_TAB:0 "พื้นผิว"
  GROUND_COMBAT_TAB:0 "กองทัพ"
- CORPORATE_TAB:1 "Holdings"
+ CORPORATE_TAB:1 "บริษัท"
  PV_BUILDINGS:0 "สิ่งปลูกสร้างในดาวเคราะห์"
  PV_SPACE_STATION_BUILDINGS:0 "สิ่งปลูกสร้างในวงโคจร"
  GROWTH:0 "เพิ่ม"
@@ -5869,7 +5869,7 @@
  OWNER_POP:1 "This Pop owns a $SPECIES|Y$ Pop."
  OWNED_POP:1 "This Pop is owned by a $SPECIES|Y$ Pop."
  STATE_OWNED_POP:0 "This Pop is owned by the state."
- SORT_BY_LOYALTY:0 "§HSort by Loyalty§!"
+ SORT_BY_LOYALTY:0 "§Hเรียงตามความภักดี§!"
  SORT_BY_CONVERSION_TIME:0 "§HSort by Conversion Time§!"
  SPECIES_VIEW_SPECIES:0 "เผ่าพันธุ์"
  SPECIES_VIEW_TYPE:0 "ประเภท"
@@ -6834,7 +6834,7 @@
  ACTION_INVITE_TO_FEDERATION_DESC:0 "เราสามารถเชิญพวกเขาเข้ามาในสหพันธ์ของเราได้"
  ACTION_INVITE_TO_FEDERATION_LONG_DESC:0 "[Actor.GetName] Wishes to invite [Recipient.GetName] into the Federation."
  ACTION_ASK_TO_JOIN_FEDERATION_TITLE:0 "ขอเข้าร่วมสหพันธ์"
- ACTION_ASK_TO_JOIN_FEDERATION_DESC:1 "Ask §H[Recipient.GetName]§! to initiate a vote for us to join their Federation."
+ ACTION_ASK_TO_JOIN_FEDERATION_DESC:1 "ขอ §H[Recipient.GetName]§! เพื่อเริ่มการโหวตให้เราเข้าร่วมสหพันธ์ของพวกเขา"
  ACTION_ASK_TO_JOIN_FEDERATION_OFFER_DESC:0 "§H[Actor.GetName]§! has requested to join our Federation."
  ACTION_ASK_TO_JOIN_FEDERATION_ALREADY_IN_FEDERATION:0 "§RWe are already part of this Federation.§!"
  ACTION_LEAVE_FEDERATION_TITLE:0 "ออกจากสหพันธ์"
@@ -9750,7 +9750,7 @@
  feature_basic_diplomacy_desc:0 "Allows basic diplomacy with other Empires."
  feature_invitation_to_alliances:0 "จัดตั้งพันธมิตร"
  feature_invitation_to_alliances_desc:0 "Allows establishing Alliances with other Empires."
- feature_vassalization_of_empires:1 "Force Subjugation"
+ feature_vassalization_of_empires:1 "บังคับให้มาเป็นบริวาร"
  feature_vassalization_of_empires_desc:1 "Allows forceful subjugation of other Empires."
  feature_alien_leaders_recruitment:0 "การสรรหาผู้นำต่างดาว"
  feature_alien_leaders_recruitment_desc:0 "Allows recruitment of Leaders from other Species within our Empire."
@@ -10178,7 +10178,7 @@
  CHAT_CVAA_SYSTEM_NAME:0 "System"
  CHAT_CVAA_MIC_NAME:0 "Mic"
  st_balanced:0 "เน้นสมดุล"
- st_balanced_desc:3 "The Sector will balance its production of Raw Resources, Manufacturing and Research. \n\nAll Planets in this sector will have their §HPlanet Automation§! turned §HOn§!."
+ st_balanced_desc:3 "เซกเตอร์นี้จะปรับสมดุลในการผลิตทรัพยากรที่เป็นวัตถุดิบ การผลิตและการวิจัย \n\nดาวเคราะห์ทั้งหมดในเซ็กเตอร์นี้จะ §Hเปิด§! §Hระบบอัตโนมัติของดาวเคราะห์§!"
  st_industrial:0 "เน้นอุตสาหกรรม"
  st_industrial_desc:1 "The Sector will focus on generating Minerals. \n\nAll Planets in this sector will have their §HPlanet Automation§! turned §HOn§!"
  st_research:0 "เน้นการวิจัย"
@@ -10870,7 +10870,7 @@
  FLEETORDER_USE_BYPASS_ORDER_LABEL:0 "Travel through $BYPASS|Y$"
  FLEETORDER_USE_BYPASS:0 "Travel through $BYPASS|Y$"
  FLEETORDER_USE_BYPASS_DESC:0 "Travel through the $BYPASS_TYPE|Y$ in $SYSTEM$"
- EXPLORE_BYPASS_NOT_NEEDED:1 "$BYPASS_TYPE|Y$ doesn't need to be explored"
+ EXPLORE_BYPASS_NOT_NEEDED:1 "ไม่จำเป็นต้องสำรวจ $BYPASS_TYPE|Y$"
  EXPLORE_BYPASS_ALREADY_EXPLORED:0 "$BYPASS|Y$ เคยถูกสำรวจมาแล้วก่อนหน้านี้"
  OUTLINER_PLANET_CONSTRUCTION_AVAILABLE:0 "Building Slots Available"
  OUTLINER_PLANET_CONSTRUCTION_AVAILABLE_DESC:0 "This Planet can support the construction of additional £building£ §YBuildings§!"
@@ -10983,9 +10983,9 @@
  SET_DESIGNATION_AUTOMATIC_DESC:0 "การกำหนดประเภทของอาณานิคมจะถูกเลือกโดยอัตโนมัติขึ้นอยู่กับเขตและสิ่งปลูกสร้างในดาว"
  CLICK_TO_SET_DESIGNATION:0 "§Gคลิกเพื่อเลือกประเภทความเป็นอาณานิคม§!"
  CLICK_TO_SET_AUTOMATIC_DESIGNATION:0 "§Gคลิกเพื่อกำหนดประเภทของอาณานิคมแบบเลือกให้โดยอัตโนมัติ§!"
- COLONY_AUTOMATIC_DEVELOPMENT_SELECTED:2 "§HAutomation: On§!\nColony is being automatically developed in accordance with the §HDesignation§!. \n\n§HRight-click§! to open settings."
- COLONY_MANUAL_DEVELOPMENT_SELECTED:2 "§HAutomation: Off§!\nColony is being manually developed.  \n\n §HRight-click§! to open settings."
- SELECT_COLONY_AUTOMATIC_DEVELOPMENT:3 "§HAutomation: Off§!\n§GClick to turn ON automated colony management.§! \n\n§HRight-click§! to open settings."
+ COLONY_AUTOMATIC_DEVELOPMENT_SELECTED:2 "§Hระบบอัตโนมัติ: เปิด§!\nอาณานิคมจะพัฒนาโดยอัตโนมัติตาม §Hการกำหนด§! \n\n§Hคลิกขวา§! เพื่อเปิดการตั้งค่า"
+ COLONY_MANUAL_DEVELOPMENT_SELECTED:2 "§Hระบบอัตโนมัติ: ปิด§!\nอาณานิคมจะพัฒนาโดยผู้เล่น  \n\n §Hคลิกขวา§! เพื่อเปิดการตั้งค่า"
+ SELECT_COLONY_AUTOMATIC_DEVELOPMENT:3 "§HAutomation: Off§!\n§Gคลิกเพื่อเปิดการจัดการอาณานิคมอัตโนมัติ§! \n\n§Hคลิกขวา§! เพื่อเปิดการตั้งค่า"
  SELECT_COLONY_MANUAL_DEVELOPMENT:2 "§HAutomation: On§!\n§GClick to turn OFF automated colony management.§!"
  PLANET_ASCENSION_TIER_UPGRADE:0 "Upgrade Ascension Tier"
  PLANET_ASCENSION_TIER_UPGRADE_BLOCKED:0 "§RCannot upgrade Ascension Tier.§!"
@@ -11134,8 +11134,8 @@
  mod_country_first_league_homeworld_engineering_research_produces_add:0 "$mod_country_engineering_research_produces_mult$"
  ghost_ship:0 "Ghost Ship"
  ghost_ship_plural:0 "Ghost Ships"
- MOD_VERSION:0 "Mod v0.65.7, Update 20/05/2022"
- MOD_DEV_MSG:0 "ผู้พัฒนา: §R*สอบถามความคิดเห็น เรื่องการเปลี่ยนชื่อเรียกเฉพาะกลับไปใช้เป็นตัวอักษรภาษาอังกฤษ\n\nแรกเริ่มเดิมที ทีมงานใช้วิธีแปลโดยใช้คำที่จำกัดความถึงสิ่งนั้นๆตามบทบาทหน้าที่เพื่อให้เข้าใจได้ง่ายจำง่าย หลักการเดียวกับการตั้งชื่อของวิเศษโดเรม่อน เช่น 'ประตูไปไหนก็ได้' ตัวอย่างดังนี้\nCitadel => ป้อมปราการอวกาศ,\nOutpost => สถานีด่านนอก,\nSentry Array => อาร์เรย์สังเกตุการณ์กาแล็กซี\nFallen Empires => จักรวรรดิเก่าแก่ทรงพลัง\nเลยอยากถามความคิดเห็นของเพื่อนๆที่เล่นม็อดตัวนี้ ว่าอยากให้เปลี่ยนกลับไปใช้ภาษาอังกฤษเหมือนเดิมดีหรือไม่ เผื่อบางทีเพื่อนๆอาจจะอยากจะไปค้นหาข้อมูลในเวป Wiki ของ Paradox เพิ่มเติมจะได้ใช้ภาษาอังกฤษค้นหาได้\n-ทางทีมงานจึงขอให้เพื่อนๆช่วยโหวตหรือแนะนำไว้ในช่อง comment ที่เว็บบอร์ดของม็อด steam workshop  https://steamcommunity.com/workshop/filedetails/discussion/2330892068/4839692156568514524/§!"
+ MOD_VERSION:0 "Mod v0.65.8, Update 11/06/2022"
+ MOD_DEV_MSG:0 "ผู้พัฒนา: §H*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่งแต่พอจะเล่นได้ละ§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1. เน้นแปลตัวเกมหลักและ DLC ที่ผมมี[ก่อน]§! : ( Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars )\n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, Matrix Explained, Kurzgesagt\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
  MOD_TEST2DUMMY2:0 "dummy2"
