Update for Patch v3.4.4 - checksum: 227f

--- a/mod/thmod/localisation/english/apocalypse_l_english.yml
+++ b/mod/thmod/localisation/english/apocalypse_l_english.yml
@@ -51,7 +51,7 @@
  tech_pk_godray:1 "กระตุ้นความศักดิ์สิทธิ์"
  tech_pk_godray_desc:1 "An arcane catalyst amplifying certain psionic wavelengths, capable of inducing hallucinations (religious experiences) in biological brains, and severe disruption (brain death) in electronic ones."
  tech_pk_nanobots:0 "กระจายนาโนบอทในชั้นบรรยากาศ"
- tech_pk_nanobots_desc:0 "$PLANET_KILLER_NANOBOTS$"
+ tech_pk_nanobots_desc:1 "$PLANET_KILLER_NANOBOTS_DESC$"
  apoc.100.name:0 "โครงการโคลอสซัส"
  apoc.100.desc:0 "$COLOSSUS_PROJECT_DESC$"
  apoc.100.desc.pacif:0 "With deterrence theory once again in vogue among leading political scientists on [Root.Capital.GetName], the Colossus Project is presented as the ultimate deterrent; a weapon to surpass even the Titan ship class. While the proposed Colossus ships could carry payloads capable of complete planetary annihilation, we will deploy them using a less violent - but nevertheless terrifyingly permanent - method of conflict resolution.\n\nIf a hypothetical enemy will not cease their aggression toward us or our allies, we must simply §Rmake them§!."
@@ -212,6 +212,7 @@
  TRIGGER_HAS_WORMHOLE:0 "Contains a Wormhole"
  TRIGGER_HAS_WORMHOLE_NOT:0 "Does NOT contain a Wormhole"
  WORMHOLE_NAME:0 "รูหนอน $SYSTEM$"
+ requires_outpost:0 "§RRequires §Y$starbase_outpost$§!.§!"
  requires_starport:0 "§RRequires §Y$starbase_starport$§! upgrade.§!"
  requires_starhold:0 "§RRequires §Y$starbase_starhold$§! upgrade.§!"
  requires_starfortress:0 "§RRequires §Y$starbase_starfortress$§! upgrade.§!"
