--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -295,6 +295,10 @@
  MOD_SHIP_NAVAL_CAP_USAGE_MULT:0 "$MOD_SHIP_NAVAL_CAP_USAGE_ADD$"
  MOD_SHIP_REPAIR_HULL_MULT:0 "Docked Ship Hull Repair Speed"
  MOD_SHIP_REPAIR_ARMOR_MULT:0 "Docked Ship Armor Repair Speed"
+ MOD_OWNED_SHIP_SPEED_MULT:0 "$MOD_SHIP_SPEED_MULT$"
+ MOD_OWNED_SHIP_EVASION_MULT:0 "$MOD_SHIP_EVASION_MULT$"
+ MOD_OWNED_SHIP_FIRE_RATE_MULT:0 "$MOD_SHIP_FIRE_RATE_MULT$"
+ MOD_OWNED_SHIP_ACCURACY_MULT:0 "$MOD_SHIP_ACCURACY_MULT$"
  MOD_ARMY_DISENGAGE_CHANCE_MULT:0 "โอกาสในการหลุดรอดของทหารราบ"
  MOD_ARMY_UPKEEP_MULT:0 "การบำรุงกองทัพ"
  MOD_ARMY_UPKEEP_MULT_DESC:1 "Affects the upkeep cost of all active armies within the Empire, increasing or reducing the monthly cost of keeping them in service."
@@ -338,7 +342,7 @@
  MOD_PIRACY_SUPPRESSION_MULT:0 "ปราบปรามสลัดอวกาศ"
  MOD_MAX_TRADE_PIRACY_ADD:0 "สลัดอวกาศ"
  MOD_MAX_TRADE_PIRACY_MULT:0 "สลัดอวกาศ"
- MOD_PLANET_CRIME_ADD:0 "อาชญากรรม"
+ MOD_PLANET_CRIME_ADD:1 "[Owner.GetCrimeDeviancy]"
  MOD_PLANET_CRIME_MULT:0 "$MOD_PLANET_CRIME_ADD$"
  MOD_PLANET_CRIME_NO_HAPPINESS_ADD:0 "ความเบี่ยงเบน"
  MOD_PLANET_CRIME_NO_HAPPINESS_MULT:0 "$MOD_PLANET_CRIME_NO_HAPPINESS_ADD$"
@@ -408,6 +412,7 @@
  mod_planet_district_mining_uncapped_build_speed_mult:0 "$mod_planet_district_mining_build_speed_mult$"
  mod_planet_district_farming_uncapped_build_speed_mult:0 "$mod_planet_district_farming_build_speed_mult$"
  mod_planet_district_generator_uncapped_build_speed_mult:0 "$mod_planet_district_generator_build_speed_mult$"
+ mod_planet_building_hydroponics_farm_build_speed_mult:0 "Hydroponics Farm Build Speed"
  mod_planet_building_foundry_1_build_speed_mult:0 "ความเร็วในการสร้างโรงหล่อ"
  mod_planet_building_factory_1_build_speed_mult:0 "ความเร็วในการสร้างโรงงาน"
  mod_planet_building_research_lab_1_build_speed_mult:0 "ความเร็วในการสร้างห้องวิจัย"
