--- a/mod/thmod/localisation/english/observer_events_l_english.yml
+++ b/mod/thmod/localisation/english/observer_events_l_english.yml
@@ -12,7 +12,7 @@
  observer.63.desc:0 "The §H[From.GetName]§! has managed to restore access to the L-Cluster! Giant creatures known as §H$nanite_space_dragon_baby_plural$§! are emerging from every existing L-Gate, although they do not yet appear to be hostile."
  observer.66.name:0 "The Dessanu Consonance"
  observer.66.desc:0 "The §H[From.GetName]§! have successfully unlocked the L-Cluster, only to reveal that it is already inhabited by an advanced civilization known as the §HDessanu Consonance§!!"
- observer.68.desc:0 "The careless fools of the §H[From.GetName]§! have meddled with forces beyond their understanding, unleashing a powerful and vengeful Shroud Avatar in the §H[shroud_spawn_system]§! system!"
+ observer.68.desc:1 "The careless fools of the §H[From.GetName]§! have meddled with forces beyond their understanding, unleashing a powerful and vengeful Shroud Avatar in the §H[shroud_spawn_system.GetName]§! system!"
  observer.70.name:0 "The Horizon Signal"
  observer.70.desc:0 "Scientists from the §H[From.Owner.GetName]§! have picked up a mysterious signal that appears to eminate from the center of a black hole..."
  observer.71.name:0 "The Worm"
