--- a/mod/thmod/localisation/english/overlord_enclaves_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_enclaves_l_english.yml
@@ -33,7 +33,7 @@
  enclave.2.tooltip.dd:0 "Mercenary capacity available"
  enclave.2.tooltip.e:1 "System requires an asteroid or a moon"
  enclave.2.tooltip.ee:1 "System has an asteroid or a moon"
- enclave.2.tooltip.f: "We must be the owner of this fleet"
+ enclave.2.tooltip.f:0 "We must be the owner of this fleet"
  enclave.2.a.tooltip:0 "A Mercenary Enclave is founded."
  enclave.23.desc:0 "Thanks for founding us! TODO_CD"
  enclave.25:0 "Mercenary Enclave Destroyed"
@@ -111,8 +111,8 @@
  enclave.280.c.desc:0 "We are always delighted to meet our patrons. Rest assured that the next dividend shipment should reach you shortly. Would you care to tell us what you think about our range of new services in high consequence protection? We think our civilian clients will love them!"
  enclave.280.b:1 "We want you to §Yrecall§! your fleet."
  enclave.280.c:0 "We are inclined to share our §Ytechnology§! with you."
- enclave.280.c.timeout: "The enclave is still upgrading with our tech. We can share new technologies with them after §Y[event_target:mercenary_enclave_country.updating_databanks_timer]§!."
- enclave.285.desc:1 "You certainly understand that recalling a fleet is a sensitive matter. We have of course prepared the necessary loopholes in all our standard contracts, but we will need at least six months to bring the fleet back, and a... generous compensation to avoid upsetting our current customers.\n\n We believe that this course of action is not in the best interests of our organization, but you are our patron - we'll make it happen if you wish it so."
+ enclave.280.c.timeout:0 "The enclave is still upgrading with our tech. We can share new technologies with them after §Y[event_target:mercenary_enclave_country.updating_databanks_timer]§!."
+ enclave.285.desc:2 "You certainly understand that recalling a fleet is a sensitive matter. We have of course prepared the necessary loopholes in all our standard contracts, but we will need at least six months to bring the fleet back, and a... generous compensation to avoid upsetting our current customers.\n\nWe believe that this course of action is not in the best interests of our organization, but you are our patron - we'll make it happen if you wish it so."
  enclave.285.tooltip:0 "This will displease the Enclave."
  enclave.290.name:1 "Commandeered Fleet Arrives."
  enclave.290.desc:1 "The Mercenary Fleet that we commandeered from our enclave is awaiting orders."
@@ -170,7 +170,7 @@
  mercenary_dividends_monthly_change_tooltip:0 "$situation_monthly_change_tooltip_no_control$"
  high_level:0 "I"
  lord_of_war:0 "Lord of War"
- enclave.2000.name:0 "Mercenary Enclave Pays Dividends"
+ enclave.2000.name:1 "The [mercenary_enclave_country.GetName] Enclave Pays Dividends"
  enclave.2000.desc:1 "Esteemed Patron, our recent contracts have been fruitful. We have expanded our civilian operations, and several corporations have hired us for a variety of security and peacekeeping services. While on contract, our operatives chanced upon some valuable scientific research. You will find it attached along with your regular dividends."
  enclave.2005.desc:1 "Esteemed Patron, the company is doing well, and our earnings are steadily increasing. Here are your dividends, along with an extra delivery of resources we recovered from a civilian client who defaulted on their payment."
  enclave.2010.desc:1 "Esteemed Patron, we are pleased to announce record profits during this fiscal interval! As such, we have included a generous bonus to your regular dividends."
@@ -182,6 +182,7 @@
  enclave.2025.c:0 "Let us help instead."
  enclave.2040.desc:0 "You want to share your technology? Your trust in us is an honor, dear patron. While our R&D department is committed to keeping us on the bleeding edge of research, we simply cannot mobilize the same amount of resources as you. And any knowledge that you share with us will be used to develop our activities in the most ethical manner!"
  enclave.2040.a.tt:0 "We will share our §Ytechnology§! with this enclave. This can only be done once every §Y10 years§!."
+ merc_enclave_grants_ships:0 "§Y[mercenary_enclave_country]§! will additionally grant us a §Gsmall military fleet§!"
  enclave.305.name:0 "[salvager_enclave_country.GetName]"
  enclave.305.a.desc:0 "Pleased to make your acquaintance! On behalf of the [salvager_enclave_country.GetName], I welcome you to our humble, interstellar workshop.\n\nSay... I'd recognize those keel fixtures anywhere - some fine work. We make a habit of keeping up with what's flying in the galaxy, try to keep up with local trends. But where was I..?\n\nAh yes: welcome! How can we facilitate your salvage and reclamation needs?"
  enclave.305.b.desc:0 "Hello, hello! On behalf of the [salvager_enclave_country.GetName], I welcome you to our salvage yard. Hulls, drives, blueprints, fittings: we stock it all.\n\nI'm not even joking - you'd be amazed what people leave inside their old ships. Just recently I laid my [salvager_enclave_country.species.GetHandNamePlural] on an entire galley unit, cast in gold. Wild.\n\nAnyway, how can we facilitate your salvage and reclamation needs?"
@@ -286,7 +287,7 @@
  enclave.405.b:2 "Would you be willing to send us a §Yteacher§! from your order?"
  enclave.405.c:1 "Can you give us §Yinsight§! on another empire?"
  enclave.405.c.tt:1 "We need at least §Y20§! £opinion£ Opinion with the §Y[shroudwalker_enclave_country.GetName]§! in order to ask for an §YInsight§!."
- enclave.405.c.tt.2:0 "We need an active Spy Network to be able to ask the §Y[shroudwalker_enclave_country.GetName]§! to guide our clandestine efforts."
+ enclave.405.c.tt.2:1 "We need an active Spy Network to be able to ask the §Y[shroudwalker_enclave_country.GetName]§! to guide our clandestine efforts."
  enclave.405.d:1 "Tell us about §Ytravel§! via the Shroud."
  enclave.405.d.tt:1 "We need at least §Y30§! £opinion£ Opinion with the §Y[shroudwalker_enclave_country.GetName]§! in order to inquire about the §YShroud Beacon§!."
  enclave.410.desc:1 "Ah, a momentous query - no less poignant for being asked by so many before you. Such a question carries a heavy price, but we can provide answers.\n\nKnow this, however: the Shroud allows us to perceive events which have not yet come to pass, and this knowledge shall help guide your course. But it is beyond the power of any one event to alter the turning of the galaxy.\n\nIf you would strike this bargain, know that your aspirations should extend no further than to be better prepared. But oh, what grand designs may be built upon even the merest glimpse at what is to come..."
@@ -695,4 +696,4 @@
  decision_shroudwalker_teacher_losing_modifier:0 "§RAny other planet with the §YShroudwalker Teacher§! planet modifier will lose it.§!"
  shroudwalker_teacher_buy_more_than_one:0 "§RWe can at most have one active §YShroudwalker Teacher§! at a time.§!"
  shroud_beacon_active_tooltip:0 "The [Root.GetName] has an active §YShroud Beacon§!."
- shroudwalker_teacher_explanation:0 "Unlocks the planet decision §Y$decision_shroudwalker_teacher$§!."
+ shroudwalker_teacher_explanation:1 "\nUnlocks the §Yplanetary decision§! §H$decision_shroudwalker_teacher$§! with the following effects:\n£amenities£ $MOD_PLANET_AMENITIES_MULT$: §G+5%§!\n$mod_planet_jobs_unity_produces_mult$: §G+10%§!\n$mod_planet_telepaths_unity_produces_add$: §G+3§!"
