--- a/mod/thmod/localisation/english/pop_factions_l_english.yml
+++ b/mod/thmod/localisation/english/pop_factions_l_english.yml
@@ -273,6 +273,9 @@
  TRADITIONALIST_PSIONIC_PURSUIT:2 "การแสวงหาพลังจิต"
  TRADITIONALIST_NO_PSIONIC_PURSUIT:1 "$TRADITIONALIST_PSIONIC_PURSUIT$"
  TRADITIONALIST_PSIONIC_PURSUIT_DESC:2 "Adopting the §Yจิตอยู่เหนือสรรพสิ่ง§! Ascension Perk will please the [Root.GetName]."
+ TRADITIONALIST_PSIONIC_TEACHINGS:0 "Psionic Teachings"
+ TRADITIONALIST_NO_PSIONIC_TEACHINGS:0 "$TRADITIONALIST_PSIONIC_TEACHINGS$"
+ TRADITIONALIST_PSIONIC_TEACHINGS_DESC:0 "Researching the £society£ §Y$tech_psionic_theory$§! Technology will please the [Root.GetName]."
  TRADITIONALIST_SHROUD_BOON:0 "ห่อสิ่งที่ดี"
  TRADITIONALIST_NO_SHROUD_BOON:0 "$TRADITIONALIST_SHROUD_BOON$"
  TRADITIONALIST_SHROUD_BOON_DESC:0 "Reaping beneficial rewards from the Shroud will please the [Root.GetName] for a time."
