--- a/mod/thmod/localisation/english/situations_l_english.yml
+++ b/mod/thmod/localisation/english/situations_l_english.yml
@@ -20,7 +20,7 @@
  SITUATION_PREDICTED_PROGRESS:0 "Predicted Next Month: $PROGRESS|Y$ ($CHANGE$)"
  SITUATION_OUTCOME_IN_MONTHS:0 "An outcome will be reached in $MONTHS|Y$ month(s)."
  SITUATION_CURRENT_STAGE:0 "Current Stage: $STAGE|Y$"
- SITUATION_STAGE_ACTIVE_RANGE:0 "This Stage is active from $VALUE1|Y$ to $VALUE2|Y$."
+ SITUATION_STAGE_ACTIVE_RANGE:1 "This Stage is active from $VALUE1|Y$ to $VALUE2|Y$."
  OUTSTANDING_SITUATIONS:0 "§HOutstanding Situations§!\n§ESituations§! that require our attention are collected here."
  CLICK_TO_EXPAND_OR_COLLAPSE:0 "§GClick to collapse or expand the section.§!"
  PREDICTED_OUTCOME:0 "Predicted Outcome"
@@ -32,6 +32,10 @@
  OUTLINER_SITUATION_OUTCOME_TIME:1 "An outcome to this Situation is expected in $MONTHS|Y$ month(s), based on the current monthly change of $CHANGE$"
  CLICK_TO_OPEN_SITUATION_LOG:0 "§GClick to open the Situation Log§!"
  SITUATION_STAGE_NO_EFFECTS:0 "This Stage has no effects."
+ SITUATION_TARGET_TOOLTIP:0 "This Situation is focused around the $TARGET_TYPE$ $TARGET|Y$."
+ SITUATION_TARGET_TOOLTIP_NO_TARGET:0 "The effects of this Situation are felt empire-wide."
+ SITUATION_START_HEADER:0 "Start Value"
+ SITUATION_START_TOOLTIP:0 "The Situation began at $VALUE|Y0$ progress."
  situation_unknown_outcome_approach:0 "We are unsure what the outcome of our current Approach to this Situation will be."
  situation_monthly_change_tooltip_no_control:0 "The progress of this §YSituation§! is not in our hands."
  situation_monthly_change_tooltip_little_control:0 "The progress of this §YSituation§! is largely out of our hands."
@@ -55,8 +59,8 @@
  stage_3:1 "Stage III"
  stage_4:1 "Stage IV"
  stage_5:1 "Stage V"
- stage_2_alt: "$stage_2$"
- stage_3_alt: "$stage_3$"
+ stage_2_alt:0 "$stage_2$"
+ stage_3_alt:0 "$stage_3$"
  string_current_approach:0 "Current Approach"
  situation_mysterious_labyrinth_monthly_change_tooltip:0 "$situation_monthly_change_tooltip_approaches_dependent$"
  situation.5.name:0 "The Mysterious Labyrinth"
@@ -165,7 +169,7 @@
  radiation_damage_low:0 "Radiation damage: minimal."
  radiation_damage_mid:0 "§YRadiAt1on d4mAGe: mEDiUm§!"
  radiation_damage_high:0 "§RHhhhAhahDiation Dam4ge: hhhhhhhhhH§!"
- d_machine_care_home:0 "Human-Machine Interface Center"
+ d_machine_care_home:1 "Organic-Machine Interface Center"
  d_machine_care_home_desc:0 "A specialized center where malfunctioning drones are paired with biological assistants."
  job_machine_nurse:0 "Bio-Assistant"
  job_machine_nurse_plural:0 "Bio-Assistants"
@@ -179,8 +183,8 @@
  radiation_hardened_components_desc:0 "Our empire perfected the process of shielding mechanical components from the damage caused by cosmic rays."
  software_damage:0 "Software Damage"
  software_damage_desc:0 "Our consciousness has been damaged by radiations. Repairs are in progress."
- machine_care_museum:0 "Human-Machine Interface Museum"
- machine_care_museum_desc:0 "A specialized center where biological assistants can experience the thrill of doing meaningless tasks to feel useful."
+ machine_care_museum:1 "Organic-Machine Interface Museum"
+ machine_care_museum_desc:1 "A specialized center where $pop_cat_bio_trophy_plural$ can experience the thrill of doing meaningless tasks to feel useful."
  situation.200.name:0 "Solar Flare"
  situation.200.desc:0 "WARNING: eruption of a solar flare detected on §Y[This.GetStarName]§!. The solar wind shockwave is weakening §Y[This.GetName]§!'s magnetosphere, exposing our drones to increased levels of ionizing radiation. The resulting software damage risks spreading to our Core intelligence, with potentially devastating consequences for our whole empire.\n\nPriority: employ radiation-hardening techniques to shield drone components, making them impervious to radiation."
  situation.200.a:0 "Prioritize shielding simple drones."
@@ -493,9 +497,9 @@
  deficit.170.desc:1 "[Owner.GetFinancialAdvisorAgencyCap] is getting increasingly concerned about the alloy shortage befalling our empire. Failure to recoup our expenses will bring widespread disruptions to our industry sector."
  deficit.170.desc.machine:1 "Budget warning: alloy expenditures surpassing expenditures for multiple subsequent months. Failure to resolve the shortage will bring widespread disruptions to our industry sector."
  deficit.170.A:1 "Scrap robots on §Y[robots_planet.GetName]§! for parts."
- deficit.170.A.tooltip:1 "Dismantle all robots on [robots_planet.GetName] (£pop£ §Y[robots_planet.half_population] Drones§!) to gain £alloys£ §Y[robots_planet.total_alloys_gained] Alloys§!"
+ deficit.170.A.tooltip:2 "Dismantle all robots on [robots_planet.GetName] (£pop£ §Y[robots_planet.recycled_robots] Drones§!) to gain £alloys£ §Y[robots_planet.total_alloys_gained] Alloys§!"
  deficit.170.B:1 "Consolidate. Recycle. Dismantle droids on §Y[robots_planet.GetName]§!."
- deficit.170.B.tooltip:1 "Dismantle half of the population on [robots_planet.GetName] (£pop£ §Y[robots_planet.half_population] Drones§!) to gain £alloys£ §Y[robots_planet.total_alloys_gained] Alloys§!"
+ deficit.170.B.tooltip:2 "Dismantle half of the population on [robots_planet.GetName] (£pop£ §Y[robots_planet.recycled_robots] Drones§!) to gain £alloys£ §Y[robots_planet.total_alloys_gained] Alloys§!"
  deficit.175.desc:1 "Having failed to resolve our alloys shortage, we have been forced to declare bankrupcy and default on our debts. [Owner.GetFinancialAdvisorAgencyCap] is drafting a new austerity plan to cut expenses and preventing this situation from ever happening again."
  deficit.185.name:0 "Acute Rare Crystal Deficits"
  deficit.185.desc:0 "Rare crystals are becoming increasingly scarce in the [Root.Owner.GetName]. Shortages have been reported in many fields, ranging from vital military supplies to critical components used in many advanced manufacturing processes. [Owner.GetFinancialAdvisorAgencyCap] warns reforms to the supply chain will be necessary within a matter of months, failing which sharp cutbacks will be necessary."
@@ -652,7 +656,7 @@
  situation.1110.b:0 "Cleanse the world of the contaminant and the venom sack!"
  situation.1110.b.tooltip:0 "Cancel the [Owner.GetParadeStudy] in favor of quickly cleaning the world."
  situation.1115.name:0 "[Target.GetName] Cleaned"
- situation.1115.desc:0 "After many months of effort, our [Owner.GetWaterCoolantLower] supply on §Y[Target.GetName]§! is finally clear of the Voidspawn Contaminant. It was not a wasted effort, as we have learned much from the xeno-biology present in our [Owner.GetWaterCoolantLower] and are now ready to proceed with the [Owner.GetParadeStudy]. Our [Owner.GetScientistPlural] now think that they can improve life on [Target.GetName] with the these discoveries once the [Owner.GetParadeStudy] concludes."
+ situation.1115.desc:1 "After many months of effort, our [Owner.GetWaterCoolantLower] supply on §Y[Target.GetName]§! is finally clear of the Voidspawn Contaminant. It was not a wasted effort, as we have learned much from the xeno-biology present in our [Owner.GetWaterCoolantLower] and are now ready to proceed with the [Owner.GetParadeStudy]. Our [Owner.GetScientistPlural] now think that they can improve life on [Target.GetName] with the these discoveries once the [Owner.GetParadeStudy] concludes."
  situation.1120.name:0 "The Last Spark"
  situation.1120.desc:1 "The observation probes we had left behind at the site of the Stellar Devourer's final demise report that portions of the body have started to merge back into the star. The energy seems to have increased stellar activity, but with the removal of the §YEgg Sac§!, our calculations state that it won't be enough to restore the §Y[dead_stellarite.solar_system.GetName]§! system to its former luster. If we turn our transport ship back now, we could still potentially reignite the star."
  situation.1120.a:0 "Return the Egg Sac and see what can be done."
@@ -795,7 +799,7 @@
  operation_consume_star_no_dysonsphere:0 "We cannot reach the star as it's sealed within a Dyson Sphere."
  operation_consume_star_already_know:0 "This empire has figured out how to counteract our Stellar Devourers."
  operation_consume_star_already_infested:0 "This empire's capital star is already infested with Stellar Devourers."
- casus_belli_cb_revenge_for_eaten_star:0 "Ate Our Star"
+ casus_belli_cb_revenge_for_eaten_star:1 "Ate Our Star"
  war_goal_wg_revenge_for_eaten_star:0 "$casus_belli_cb_revenge_for_eaten_star$"
  war_goal_wg_revenge_for_eaten_star_desc:0 "War is waged to utterly conquer the enemy that ate our star."
  casus_belli_cb_end_threat_revenge_for_eaten_star:0 "Ate their Star"
