--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -380,7 +380,7 @@
  BUILDING_SLOT_LOCKED:0 "ช่องสิ่งปลูกสร้างถูกล็อก"
  BUILDING_SLOT_LOCKED_DESC:2 "Slots can be unlocked by building $CITY_DISTRICT|Y$ or upgrading your $CAPITAL_BUILDING|Y$"
  BUILDING_SLOT_LOCKED_HABITAT_DESC:1 "Slots can be unlocked by upgrading your $CAPITAL_BUILDING|Y$ or by taking the §Y$ap_voidborn$§! Ascension Perk"
- BUILDING_SLOT_LOCKED_BRANCH_OFFICE_DESC:2 "Branch Office slots are unlocked by upgrades to this planet's $CAPITAL_BUILDING|Y$ or the planet's owner taking the §YInsider Trading§! tradition."
+ BUILDING_SLOT_LOCKED_BRANCH_OFFICE_DESC:3 "Branch Office building slots are unlocked by upgrades to this planet's $CAPITAL_BUILDING|Y$."
  BUILDING_CAPPED_IN_EMPIRE_WITH_NUM:0 "จำกัดจำนวนต่อจักรวรรดิ: §Y$NUM$/$MAX$§!"
  BUILDING_CAPPED_IN_EMPIRE:0 "จำกัดจำนวนต่อจักรวรรดิ: §Y$MAX$§!"
  BUILDING_CAPPED_ON_PLANET_WITH_NUM:0 "จำกัดจำนวนต่อดาว: §Y$NUM$/$MAX$§!"
@@ -790,6 +790,7 @@
  mod_job_maintenance_drone_per_pop_short:0 "\n§G+1§! £mod_job_maintenance_drone_add£ ต่อ $VALUE$ £pop£"
  job_brain_drone:0 "โดรนสติปัญญา"
  job_brain_drone_plural:0 "โดรนสติปัญญา"
+ job_brain_drone_icon:0 "£job_brain_drone£"
  job_brain_drone_desc:1 "Scientists, researchers, and inventors: Brain Drones are responsible for the technological development of the nation."
  job_brain_drone_effect_desc:1 "£job_brain_drone£ $job_brain_drone_plural$ เปลี่ยน £minerals£ §Y$minerals$§! เป็น £physics£ £society£ £engineering£ §Yแต้มการวิจัย§! สำหรับเทคโนโลยีใหม่ๆ"
  mod_job_brain_drone_add:0 "งาน $job_brain_drone$"
@@ -797,6 +798,7 @@
  mod_job_brain_drone_per_pop_short:0 "\n§G+1§! £mod_job_brain_Drone_add£ ต่อ $VALUE$ £pop£"
  job_calculator:0 "ผู้คำนวณ"
  job_calculator_plural:0 "ผู้คำนวณ"
+ job_calculator_icon:0 "£job_calculator£"
  job_calculator_desc:1 "Endlessly processing equations, probabilities, and testing new functions, Calculators lead the technological development of the Machine Intelligence."
  job_calculator_effect_desc:2 "£job_calculator£ $job_calculator_plural$ เปลี่ยน £energy£ §Y$energy$§! เป็น £physics£ £society£ £engineering£ §Yแต้มการวิจัย§! สำหรับเทคโนโลยีใหม่ๆ"
  mod_job_calculator_add:0 "งาน $job_calculator$"
@@ -855,7 +857,7 @@
  job_colonist:0 "นักล่าอาณานิคม"
  job_colonist_plural:0 "นักล่าอาณานิคม"
  job_colonist_desc:1 "The settling of a new world is no easy undertaking."
- job_colonist_effect_desc:0 "£job_colonist£ $job_colonist_plural$ ผลิต £food£ §Y$food$§! จำนวนเล็กน้อย และ £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!"
+ job_colonist_effect_desc:1 "£job_colonist£ $job_colonist_plural$ produce a small amount of $r_food$ (or $r_minerals$) and £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!"
  mod_job_colonist_add:0 "งาน $job_colonist$"
  mod_job_colonist_per_pop:0 "£job_colonist£ §G+1§! อาชีพ $job_colonist$ ต่อ $VALUE$ ประชากร"
  mod_job_colonist_per_pop_short:0 "\n§G+1§! £mod_job_colonist_add£ ต่อ $VALUE$ £pop£"
@@ -939,7 +941,7 @@
  job_telepath:0 "นักโทรจิต"
  job_telepath_plural:0 "นักโทรจิต"
  job_telepath_desc:0 "Members of the Psi-Corps, a unit of psionically-gifted crime fighters."
- job_telepath_effect_desc:0 "£job_telepath£ $job_telepath_plural$ผลิต £unity£ §Y$unity$§! และลด £crime£ §Y$PLANET_CRIME_TITLE$§!"
+ job_telepath_effect_desc:1 "£job_telepath£ $job_telepath_plural$ produce £unity£ §Y$unity$§!, decrease £crime£ §Y$PLANET_CRIME_TITLE$§!, and provide a general productivity boost on the planet."
  mod_job_telepath_add:0 "งาน $job_telepath$"
  mod_job_telepath_per_pop:0 "§G+1§! อาชีพ $job_telepath$ ต่อ $VALUE$ ประชากร"
  mod_job_telepath_per_pop_short:0 "\n§G+1§! £mod_job_telepath_add£ per $VALUE$ £pop£"
@@ -995,6 +997,7 @@
  mod_job_head_researcher_per_pop_short:0 "\n§G+1§! £mod_job_head_researcher_add£ ต่อ $VALUE$ £pop£"
  job_researcher:0 "นักวิจัย"
  job_researcher_plural:0 "นักวิจัย"
+ job_researcher_icon:0 "£job_researcher£"
  job_researcher_desc:0 "The eternal mystery of the world is its comprehensibility."
  job_researcher_effect_desc:1 "£job_researcher£ $job_researcher_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £physics£ £society£ £engineering£ §YResearch Points§!"
  mod_job_researcher_add:0 "งาน $job_researcher$"
@@ -1079,7 +1082,7 @@
  has_ranger_lodge:0 "$TRIGGER_FAIL$§RThis blocker will not be removeable as long as the §Y$building_ranger_lodge$§! exists.§!"
  job_politician:0 "นักการเมือง"
  job_politician_plural:0 "นักการเมือง"
- job_politician_desc:0 "The government of an entire planet is a daunting task that requires dedicated and highly trained individuals."
+ job_politician_desc:1 "The government of an entire planet is a daunting task that requires dedicated and highly trained individuals."
  job_politician_effect_desc:0 "£job_politician£ $job_politician_plural$ เปลี่ยน £consumer_goods£ §Y$consumer_goods$§! เป็น £unity£ §Y$unity$§! และ £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!"
  mod_job_politician_add:0 "งาน $job_politician$"
  mod_job_politician_per_pop:0 "§G+1§! อาชีพ $job_politician$ ต่อ $VALUE$ ประชากร"
@@ -1500,6 +1503,7 @@
  mod_planet_administrators_unity_produces_add:0 "$mod_planet_bureaucrats_unity_produces_mult$"
  mod_planet_administrators_upkeep_mult:1 "[GetAdministratorWithIcon] Upkeep"
  mod_planet_priests_unity_produces_add:0 "£unity£ $unity$ จาก £job_priest£ $job_priest_plural$"
+ mod_planet_managers_unity_produces_add:0 "£unity£ $unity$ from £job_manager£ $job_manager_plural$"
  mod_planet_merchants_unity_produces_add:0 "£unity£ $unity$ จาก £job_merchant£ $job_merchant_plural$"
  mod_planet_enforcers_unity_produces_add:0 "£unity£ $unity$ จาก £job_enforcer£ $job_enforcer_plural$"
  mod_planet_telepaths_unity_produces_add:0 "£unity£ $unity$ จาก £job_telepath£ $job_telepath_plural$"
@@ -2678,6 +2682,9 @@
  col_habitat_refinery_desc:0 "เป็นเมืองที่ถูกสร้างขึ้นเพื่อการผลิตทรัพยากรสำคัญทางยุทธศาสตร์ในห้วงอวกาศ"
  col_habitat_mining:0 "สถานีขุดแร่"
  col_habitat_mining_desc:0 "เป็นเมืองที่ถูกสร้างขึ้นเพื่อการเก็บแร่ในห้วงอวกาศ"
+ col_habitat_farming:0 "Hydroponics Station"
+ col_habitat_farming_desc:0 "An artificial deep-space arcology dedicated to the growing of crops"
+ col_habitat_farming_custom:0 "§Y$district_hab_housing_plural$§! give up §R-2§! Housing in exchange for §G+1§! £job_farmer£ $job_farmer$ Job."
  col_habitat_energy:0 "สถานีกำเนิดพลังงาน"
  col_habitat_energy_desc:0 "เป็นเมืองที่ถูกสร้างขึ้นเพื่อการผลิตพลังงานในห้วงอวกาศ"
  col_ring_mix:0 "โลกวงแหวน"
@@ -3481,6 +3488,8 @@
  wg_expel_corp_status_quo_effects:1 "All Branch Offices owned by the §Y[From.GetName]§! in the §Y[Root.GetName]§! are closed.\n§Y[From.GetName]§! receives £energy£ §Y1000§! for each closed Branch Office."
  wg_expel_corp_effects:2 "All Branch Offices owned by the §Y[From.GetName]§! in the §Y[Root.GetName]§! are closed.\n§Y[Root.GetName]§! receives £energy£ §Y1000§! for each closed Branch Office."
  wg_seize_branch_office_effects:1 "§Y[Root.GetName]§! takes control of the planetary Branch Office\n"
+ wg_expel_corp_subject_status_quo_effects:1 "All Branch Offices owned by the §Y[From.GetName]§! in the §Y[Root.GetName]§! (and §Y[Root.GetAdj] Subjects§!' colonies) are closed.\n§Y[From.GetName]§! receives £energy£ §Y1000§! for each closed Branch Office."
+ wg_expel_corp_subject_effects:1 "All Branch Offices owned by the §Y[From.GetName]§! in the §Y[Root.GetName]§! (and §Y[Root.GetAdj] Subjects§!' colonies) are closed.\n§Y[Root.GetName]§! receives £energy£ §Y1000§! for each closed Branch Office."
  market_founding_chain_title:0 "Founding the Galactic Market"
  market_founding_chain_desc:0 "The establishment of an international commercial forum is nigh, and whoever controls the centralized exchange station stands to benefit.\n\nShould we desire to compete for the title of market host, we have a few years to use §HDecisions§! to nominate one of our worlds to tether the $galactic_market_station$."
  casus_belli_cb_steal_galatron:1 "อ้างสิทธิ์ในกาลาตรอน"
@@ -3893,8 +3902,10 @@
  vo_evil_corp:0 "บริษัทที่ไร้ความปรานี"
  vo_slick_corp:0 "บริษัทที่มีเล่ห์เหลี่ยม"
  vo_the_worker:0 "แรงงาน"
- HAS_NOT_OVERLORD:0 "ไม่มี $OVERLORD$ เป็นเจ้านาย"
- HAS_OVERLORD:0 "มี $OVERLORD$ เป็นเจ้านาย"
+ HAS_SUBJECT:0 "Has $SUBJECT|Y$ as a subject"
+ HAS_NOT_SUBJECT:0 "Does NOT have $SUBJECT|Y$ as a subject"
+ HAS_NOT_OVERLORD:1 "Does NOT have $OVERLORD|Y$ as an overlord"
+ HAS_OVERLORD:1 "Has $OVERLORD|Y$ as an overlord"
  HAS_NOT_ANY_OVERLORD:0 "Does NOT have any overlord"
  HAS_NOT_RIVAL:0 "Is NOT rivaling $RIVAL$"
  HAS_RIVAL:0 "Is rivaling $RIVAL$"
@@ -3992,3 +4003,4 @@
  CARAVANEERS_LABEL_TOOLTIP:0 "Spawning of Caravaneers - Space based traders who send out fleets across the galaxy to offer you great deals!"
  DIPLO_ACTION_ALREADY_REPLIED:0 "$COUNTRY|Y$ has already replied to $ACTION|Y$"
  overlord_subsidy:0 "Overlord Subsidy"
+ OVERLORD_SUBSIDY_UNABLE_TO_PAY_RESEARCH:0 "$OVERLORD|Y$ unable to pay research subsidies to $SUBJECT|Y$ - insufficient production."
