--- a/mod/thmod/localisation/english/messages_l_english.yml
+++ b/mod/thmod/localisation/english/messages_l_english.yml
@@ -335,7 +335,7 @@
  MESSAGE_TRADE_DEAL_END_CLOSED_BORDERS_THEM:0 "Our trade treaty with $WITH|Y$ has ended as they have closed borders their borders to us."
  MESSAGE_TRADE_DEAL_END_SUBJECT_ACCESS:0 "Our trade treaty with $WITH|Y$ has ended as we have become subjects which no longer control our access."
  MESSAGE_TRADE_DEAL_END_SUBJECT_ACCESS_THEM:0 "Our trade treaty with $WITH|Y$ has ended as they have become subjects which no longer control their access."
- MESSAGE_TRADE_DEAL_END_CANCELED_FLEET: "Our trade deal with $WITH|Y$ has ended because the subjugation agreement was canceled.\n\nWe traded:\n$OUR_OFFER$\n\nThey traded:\n$THEIR_OFFER$"
+ MESSAGE_TRADE_DEAL_END_CANCELED_FLEET:0 "Our trade deal with $WITH|Y$ has ended because the subjugation agreement was canceled.\n\nWe traded:\n$OUR_OFFER$\n\nThey traded:\n$THEIR_OFFER$"
  MESSAGE_TRADE_DEAL_END_GUARANTEE_ALLIANCE:0 "Our guarantee trade treaty with $WITH|Y$ has ended because we joined an alliance."
  MESSAGE_TRADE_DEAL_END_GUARANTEE_ALLIANCE_THEM:0 "$WITH|Y$ has ended our guarantee trade treaty because they joined an alliance."
  MESSAGE_TRADE_DEAL_END_SUPPORT_INDEPENDENCE_VASSALAGE:1 "Our trade treaty with $WITH|Y$ has ended because we have become subjects and can no longer support their independence."
