--- a/mod/thmod/localisation/english/technology_l_english.yml
+++ b/mod/thmod/localisation/english/technology_l_english.yml
@@ -47,32 +47,32 @@
  tech_corvette_hull_2_desc:0 "The latest generation of corvette hulls have optimized structural integrity fields and improved bulkheads."
  tech_corvette_build_speed:0 "รูปแบบยานคอร์เวตมาตรฐาน"
  tech_corvette_build_speed_desc:0 "Establishing new standards for the modeling and construction of corvettes greatly improves the efficiency of the production pipeline."
- tech_corvette_hull_effect: "$mod_shipsize_corvette_hull_add$: §G+100§!"
- tech_corvette_build_speed_effect: "$mod_ship_corvette_cost_mult$: §G-5%§!\n$mod_shipsize_corvette_build_speed_mult$: §G-25%§!"
+ tech_corvette_hull_effect:0 "$mod_shipsize_corvette_hull_add$: §G+100§!"
+ tech_corvette_build_speed_effect:0 "$mod_ship_corvette_cost_mult$: §G-5%§!\n$mod_shipsize_corvette_build_speed_mult$: §G+25%§!"
  tech_destroyer_hull_1:0 "ตัวยานพิฆาตแบบปรับปรุง"
  tech_destroyer_hull_1_desc:0 "Advances in building techniques will allow for the construction of sturdier and more durable destroyers."
  tech_destroyer_hull_2:0 "ตัวยานพิฆาตขั้นสูง"
  tech_destroyer_hull_2_desc:0 "The latest generation of destroyer hulls have optimized structural integrity fields and improved bulkheads."
  tech_destroyer_build_speed:0 "รูปแบบยานพิฆาตมาตรฐาน"
  tech_destroyer_build_speed_desc:0 "Establishing new standards for the modeling and construction of destroyers greatly improves the efficiency of the production pipeline."
- tech_destroyer_hull_effect: "$mod_shipsize_destroyer_hull_add$: §G+200§!"
- tech_destroyer_build_speed_effect: "$mod_ship_destroyer_cost_mult$: §G-5%§!\n$mod_shipsize_destroyer_build_speed_mult$: §G-25%§!"
+ tech_destroyer_hull_effect:0 "$mod_shipsize_destroyer_hull_add$: §G+200§!"
+ tech_destroyer_build_speed_effect:0 "$mod_ship_destroyer_cost_mult$: §G-5%§!\n$mod_shipsize_destroyer_build_speed_mult$: §G+25%§!"
  tech_cruiser_hull_1:0 "ตัวยานลาดตระเวนแบบปรับปรุง"
  tech_cruiser_hull_1_desc:0 "Advances in building techniques will allow for the construction of sturdier and more durable cruisers."
  tech_cruiser_hull_2:0 "ตัวยานลาดตระเวนขั้นสูง"
  tech_cruiser_hull_2_desc:0 "The latest generation of cruiser hulls have optimized structural integrity fields and improved bulkheads."
  tech_cruiser_build_speed:0 "รูปแบบยานลาดตระเวนมาตรฐาน"
  tech_cruiser_build_speed_desc:0 "Establishing new standards for the modeling and construction of cruisers greatly improves the efficiency of the production pipeline."
- tech_cruiser_hull_effect: "$mod_shipsize_cruiser_hull_add$: §G+500§!"
- tech_cruiser_build_speed_effect: "$mod_ship_cruiser_cost_mult$: §G-5%§!\n$mod_shipsize_cruiser_build_speed_mult$: §G-25%§!"
+ tech_cruiser_hull_effect:0 "$mod_shipsize_cruiser_hull_add$: §G+500§!"
+ tech_cruiser_build_speed_effect:0 "$mod_ship_cruiser_cost_mult$: §G-5%§!\n$mod_shipsize_cruiser_build_speed_mult$: §G+25%§!"
  tech_battleship_hull_1:0 "ตัวยานประจัญบานแบบปรับปรุง"
  tech_battleship_hull_1_desc:0 "Advances in building techniques will allow for the construction of sturdier and more durable battleships."
  tech_battleship_hull_2:0 "ตัวยานประจัญบานขั้นสูง"
  tech_battleship_hull_2_desc:0 "The latest generation of battleship hulls have optimized structural integrity fields and improved bulkheads."
  tech_battleship_build_speed:0 "รูปแบบยานประจัญบานมาตรฐาน"
  tech_battleship_build_speed_desc:0 "Establishing new standards for how we design and construct massive battleships greatly improves the speed at which they can be assembled."
- tech_battleship_hull_effect: "$mod_shipsize_battleship_hull_add$: §G+800§!"
- tech_battleship_build_speed_effect: "$mod_ship_battleship_cost_mult$: §G-5%§!\n$mod_shipsize_battleship_build_speed_mult$: §G-25%§!"
+ tech_battleship_hull_effect:0 "$mod_shipsize_battleship_hull_add$: §G+800§!"
+ tech_battleship_build_speed_effect:0 "$mod_ship_battleship_cost_mult$: §G-5%§!\n$mod_shipsize_battleship_build_speed_mult$: §G+25%§!"
  tech_titan_hull_1:0 "ตัวยานไททันแบบปรับปรุง"
  tech_titan_hull_1_desc:0 "Advances in building techniques will allow for the construction of sturdier and more durable titans."
  tech_titan_hull_2:0 "ตัวยานไททันขั้นสูง"
@@ -194,6 +194,7 @@
  tech_construction_templates:0 "แม่แบบการก่อสร้าง"
  tech_construction_templates_desc:1 "Standardized pre-fab templates massively reduce on-site facility construction times."
  tech_robomodding:0 "ระบบแม่แบบเครื่องจักร"
+ tech_construction_templates_effect:0 "$building_resource_silo$ Capacity: §G+5000§!"
  tech_robomodding_desc:0 "Rewritable assembly templates allow for the creation of bespoke synthetic worker designs."
  tech_robomodding_m:0 "ระบบแม่แบบเครื่องจักร"
  tech_robomodding_m_desc:0 "Standardization of assembly templates allow for improved specialization of the drone population."
